[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/Cell/Cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/GameGrid/GameGrid.gd" type="Script" id=2]

[node name="GameGrid" type="Control"]
rect_scale = Vector2( 20, 20 )
script = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 50.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( -72, -23 )
columns = 3

[node name="Cell" parent="GridContainer" instance=ExtResource( 1 )]

[node name="Cell2" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 4.0
margin_right = 4.0

[node name="Cell3" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 8.0
margin_right = 8.0

[node name="Cell4" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 4.0
margin_bottom = 4.0

[node name="Cell5" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0

[node name="Cell6" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 4.0
margin_right = 8.0
margin_bottom = 4.0

[node name="Cell7" parent="GridContainer" instance=ExtResource( 1 )]
margin_top = 8.0
margin_bottom = 8.0

[node name="Cell8" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 4.0
margin_top = 8.0
margin_right = 4.0
margin_bottom = 8.0

[node name="Cell9" parent="GridContainer" instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="Total1" type="Label" parent="."]
margin_left = -1.15
margin_top = 9.45
margin_right = 23.85
margin_bottom = 34.45
rect_scale = Vector2( 0.1, 0.1 )
align = 1
valign = 1

[node name="Total2" type="Label" parent="."]
margin_left = 2.9
margin_top = 8.9
margin_right = 27.9
margin_bottom = 33.9
rect_scale = Vector2( 0.1, 0.1 )
align = 1
valign = 1

[node name="Total3" type="Label" parent="."]
margin_left = 6.85
margin_top = 9.1
margin_right = 31.85
margin_bottom = 34.1
rect_scale = Vector2( 0.1, 0.1 )
align = 1
valign = 1

[node name="TotalSum" type="Label" parent="."]
margin_left = -5.9
margin_top = 2.75
margin_right = 19.1
margin_bottom = 27.75
rect_scale = Vector2( 0.1, 0.1 )
text = "0"
align = 1
valign = 1
